--- a/Task03/css/main.css
+++ b/Task03/css/main.css
@@ -4,3 +4,23 @@
     width: 200px;
 }
 
+h2.page-title{
+    padding: 0 0 0.5em 0;
+    border-bottom: solid 3px #eb5405;
+}
+
+.text-aikare{
+    color:#eb5405;
+    background-color: #fff;
+}
+
+.page-img{
+    width: 100%;
+    height: 50px;
+    object-fit: cover;
+}
+
+.bg-aikare{
+    color: #fff;
+    background-color: #eb5405;
+}
